feat:navbar + first LoginPage

--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Your page title</title>
-    <link rel="icon" href="./img/favicon.svg" type="image/svg+xml" />
+    <link href="./img/RieCochet_Logo.png" rel="icon" type="image/svg+xml" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
   </head>
 
   <body>
