--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Your page title</title>
+    <title>RieCochet</title>
     <link href="./img/RieCochet_Logo.png" rel="icon" type="image/svg+xml" />
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
   </head>
 
   <body>
