feat: add fixed-top navabar and browser logo

--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>RieCochet</title>
-    <link href="./img/RieCochet_Logo.png" rel="icon" type="image/svg+xml" />
+    <link href="./img/Riez_Logo.png" rel="icon" type="image/svg+xml" />
   </head>
 
   <body>
-    <header><div id="navbarWrapper"></div></header>
+    <header><div class="fixed-top" id="navbarWrapper"></div></header>
     <main></main>
     <footer></footer>
   </body>
