--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>RieCochet</title>
-    <link href="./img/Riez_Logo.png" rel="icon" type="image/svg+xml" />
+    <link href="./img/Riez_Logo.svg" rel="icon" type="image/svg+xml" />
+
+    <link rel="preconnect" href="https://rsms.me/" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
   </head>
 
   <body>
-    <header><div class="fixed-top" id="navbarWrapper"></div></header>
+    <header class="sticky-top"><div id="navbarWrapper"></div></header>
     <main></main>
     <footer></footer>
   </body>
