--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -8,6 +8,8 @@
 
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <link href="./img/Riez_Logo.svg" rel="icon" type="image/svg+xml" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
 
   <body>
@@ -16,3 +18,4 @@
     <footer></footer>
   </body>
 </html>
+
